SDK-323: Adding support for users to pass JVM argument using the SDK (Updating the documentation) (#262)